tree.c
@@ -3732,8 +3732,8 @@ xmlFreeNode(xmlNodePtr cur) {
  * @cur:  the node
  *
  * Unlink a node from it's current context, the node is not freed
- * If one need to free the node, use xmlNodeFree() routine after the
- * unlink.
+ * If one need to free the node, use xmlFreeNode() routine after the
+ * unlink to discard it.
  */
 void
 xmlUnlinkNode(xmlNodePtr cur) {
